# 2023-RobotDesign3

./: CMakeLists.txt  README.md  package.xml
launch/: crane_x7_with_table_add.launch
models/block_stopper/: model.sdf
models/cube30/: cube30.stl  model.config  model.rsdf  model.sdf
scripts/: parameters.py  pick_color_block.py  pick_color_block_in_gazebo.py
worlds/: table.world
