<?xml version="1.0"?>
<package format="2">
  <name>2023-RobotDesign3</name>
  <version>0.0.0</version>
  <description>The 2023-RobotDesign3-teamMumei package</description>

  <maintainer email="s.yujiro613@gmail.com">Yujiro Shito</maintainer>
  <maintainer email="nonakashinnosuke@gmail.com">Shinnosuke Nonaka</maintainer>


  <license>NON-COMMERCIAL LICENSE AGREEMENT</license>


  <author email="tiryoh@gmail.com">Daisuke Sato</author>
  <author email="nomura@rt-net.jp">Hiroyuki Nomura</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <depend>gazebo_ros</depend>
  <exec_depend>gazebo</exec_depend>


 <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros gazebo_model_path="${prefix}/model"/>
  </export>
</package>
